Changed contact info again

--- a/CalendarGenerator/index.html
+++ b/CalendarGenerator/index.html
@@ -29,7 +29,7 @@
   
   <div id="contact">
     <p>2017-10-18 Filip Strandberg</p>
-    <p>ezstrfi, filip.strandberg@tieto.com</p>
+    <p>strandbergfilip94@gmail.com</p>
   </div>
 
 	<div id="color_picker_container">
