Updated file structure for github pages

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 	<!-- Functionality for generator -->
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="scripts/script.js"></script>
 
 	<!-- Page styling -->
-	<link rel="stylesheet" type="text/css" href="styling.css">
+	<link rel="stylesheet" type="text/css" href="css/styling.css">
 </head>
 <body>
 	<button id="help_button" onclick="displayHelp()">Help</button>
