Change some text and spelling

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<h2>Choose a color with the color picker on the right!</h2>
 		</br>
 		<h2><span style="text-decoration: underline;">Click and drag</span> (or just click) in the cells to change its color!</h2>
-		<h2>You can also <span style="text-decoration: underline;">click on a date</span> to color that whole row olive!</h2>
+		<h2>You can also <span style="text-decoration: underline;">click on a date</span> to color that whole column olive!</h2>
 
 		<h3>
 			</br>
