Update functionality for only changing months
Make the button do what users think it does, generating a calendar
by only changing the months.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	 
 	    
 	   	<div class="buttonContainer">
-		   	<button id="generate" class="button scroll half" onclick="calendar.generate()">Generate/change months</button>
+		   	<button id="generate" class="button scroll half" onclick="calendar.generate()">Generate</button>
 		    <button id="iJustWannaChangeMonthsButton" class="button half" onclick="calendar.iJustWannaChangeMonths()">I just wanna change months</button>
 	   	</div>
 	    
