Fix bug empty edit field
Fix error/mistake where clicking the "Edit" button with empty text
field results in an error.

Remove unused code "getNames()", that tried to get names by
previous "teamMember" inputs (v2.1.4).

Update help text. Only show extra info under the calendar when
pressing help button.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <p class="help_text">To edit a existing calendar, copy the existing calendar code from the wiki and paste here &#8594;</p>
   <p class="help_text">Click here to display the calendar at the bottom of this page, then click in the cells to change the color of it &#8594;</p>
   <p class="help_text">Here you select the starting month for the calendar, the calendar will be your selected month plus the two months after &#8594;</p>
-  <p class="help_text">When you have filled in everything you want above, click here to show your calendar. Click multiple times to change header color! &#8594;</p>
+  <p class="help_text">Click here to generate your calendar. Click multiple times to change header color! &#8594;</p>
   <p class="help_text">Here you can either add or delete an name to the calendar &#8594;</p>
   
   <div id="contact">
@@ -103,7 +103,7 @@
 
     </br>
 
-    <h2>When you're done, click the "Copy HTML to clipboard" button or <span class="cursor_pointer" style="text-decoration: underline;" onclick="calendar.copy()">here</span>, to copy the code and paste in the wiki page!</h2>
+    <h2>When you're done, click the "Copy HTML to clipboard" button to copy the code and paste where you please!</h2>
   </div>
 
 </body>
